--- a/docs/1.스프링배치.md
+++ b/docs/1.스프링배치.md
@@ -44,8 +44,10 @@ https://docs.spring.io/spring-batch/docs/5.0.4/reference/html/whatsnew.html
 <br/>
 
 ## 4. BATCH_JOB_INSTANCE - JobKey
-- - Spring Batch5로 넘어가면서 처음에 Job이 Complete가 되면 Job을 다시 실행하지 못한다.
+- Spring Batch5로 넘어가면서 처음에 Job이 Complete가 되면 Job을 다시 실행하지 못한다.
     - 하지만 이전 버전에서는 Job_Key가 변경이 되면서 실행된다.
+
+
 ```json
 
 [
@@ -62,6 +64,7 @@ https://docs.spring.io/spring-batch/docs/5.0.4/reference/html/whatsnew.html
     "JOB_KEY": "e070bff4379694c0210a51d9f6c6a564"
   }
 ]
+
 
 =========### Spring Batch 5 ### ====================
 [
