update ch2, 3 md

--- a/docs/2.배치도메인이해.md
+++ b/docs/2.배치도메인이해.md
@@ -306,7 +306,7 @@ select * from BATCH_JOB_EXECUTION;
 3. JobStep : Step안에서 Job을 호출하여 실행한다.
 4. FlowStep : Step 안에서 Flow를 실행한다.
 
-![img.png](img/img.png)
+![img.png](img/2/img.png)
 
 
 ## StepBuilder
@@ -367,7 +367,7 @@ public class StepExecution {
 }
 
 ```
-![img.png](img/img2.png)
+![img.png](img/2/img2.png)
 
 - 처음에 exception이 발생하고 다시 Job을 실행을 시켰을 때 step2만 실행된 것을 확인을 할 수 있다.
 
@@ -384,7 +384,7 @@ filterCount : ItemProcessor에서 처리된 아이템 수
 ```
 
 
-![img.png](img/img3.png)
+![img.png](img/2/img3.png)
 
 
 
