--- a/docs/3.Job,Step,Flow.md
+++ b/docs/3.Job,Step,Flow.md
@@ -326,6 +326,224 @@ java.lang.RuntimeException: Step5 Exception Haha
 ![img.png](img/3/5.png)
 
 
+<br/>
+<br/>
+
+![img.png](img/3_1.png)
+
+- `start, from, next` : 플로우의 흐름을 정의하는 역활을 하낟.
+- `on, to, stop, fail` : 조건에 따라 흐름을 전환하는 역활을 수행한다.
+
+![img_1.png](img/3_2.png)
+
+### 전체적인 흐름
+1. FlowBuilder 
+2. 처음에 Start()
+3. ON (조건)
+4. Transitionbulider
+5. 패턴에 해당하는 API 호출
+6. return FlowBuilder를 반환한다.
+7. 다시 Step으로 넘어와서 처리한다.
+
+<br/>
+
+## 배치 상태 유형 - Transition
+
+---
+
+### 1. BatchStatus , ExitStatus
+
+- JobExecution, StepExecution 속성으로 Job, Step의 최종 결과를 의미한다.
+
+
+### BatchStatus , ExitStatus 차이점
+
+- BatchStatus (Job) : 배치의 현재 실행중인 상태입니다. 즉 Job의 실행 이후 배치가 실행인지 종단이 되었는지, 실패를 했는지를 의미한다.
+- ExitStatus(Step) : Job, Step이 어떤 상태로 종료되었는지를 의미한다.
+
+[https://www.inflearn.com/questions/865614/batchstatus-와-exitstatus-의-차이점이-뭔지-모르겠습니다](https://www.inflearn.com/questions/865614/batchstatus-%EC%99%80-exitstatus-%EC%9D%98-%EC%B0%A8%EC%9D%B4%EC%A0%90%EC%9D%B4-%EB%AD%94%EC%A7%80-%EB%AA%A8%EB%A5%B4%EA%B2%A0%EC%8A%B5%EB%8B%88%EB%8B%A4)
+
+### SimpleJob
+
+- 마지막 BatchStatus값을 Job의 최종 BatchStatus값으로 반영
+- Step이 실패할 경우 해당 Step이 마지막이 된다.
+
+### FlowJob
+
+- Flow 내 Step의 ExitStatus값을 FlowExecutionStatus 저장하며 마지막 Flow의 FlowExecutionStatus값을 최종 BatchStatus가 된다.
+
+### 2. FlowExecutionStatus
+
+- FlowExecution의 속성으로 Flow 실행 후 최종 결과 상태가 무엇이지 정의
+- Flow 내 Step이 실행되고 나서 ExitStatus값을 FlowExecutionStatus값으로 저장한다.
+- FlowJob의 배치 결과 상태에 관여한다.
+
+> COMPLETED, STOPPED, FAILED, UNKNOWN
+>
+
+### 3. Transition
+
+- Flow내 Step의 조건부 전환을 정의한다.
+- Job의 API 설정에서 on 메서드를 호출하면 TrasnsitionBuilder가 반환되어 Trasnsition Flow를 구성
+- Step의 ExitStatus가 매칭되지 않으면 예외를 발생하고 Job은 실패된다.
+
+### API
+
+<aside>
+💡 Flow의 흐름을 관리하는 API
+
+</aside>
+
+1. On(String Pattern)
+
+Step의 ExitStatus와 Pattern이 매칭하면 다음에 실행할 Step을 지정할 수 있다.
+
+- 특수문자
+  - * : 0개 이상의 문자와 매칭 , 모든 ExitStatus와 매칭된다.
+  - ? : 정확히 1개의 문자와 매칭
+    - c*t는 cat, count 매칭되고, c?t는 cat에만 매칭된다.
+
+1. to()
+
+다음으로 실행할 단계를 지정
+
+1. from
+
+이전 단계에서 정의한 Transition을 새롭게 추가 정의함
+
+<aside>
+💡 Job을 중단, 종료하는 API                                                                                                                                                                                        - Flow가 실행되면 FlowExecutionStatus에 상태값이 저장되고 Job의 Batch, ExitStatus에 반영한다.                       Step의 Batch, ExitStatus에는 영향을 주지 않고 Job의 상태만 변경한다.
+
+</aside>
+
+1. Stop
+
+FlowExecutionStatus, BatchStatus, ExitStatus를 STOPPED로 종료를 시킨다.
+
+1. fail
+
+FlowExecutionStatus, BatchStatus, ExitStatus를 FAILED로 종료를 시킨다.
+
+6.end
+
+FlowExecutionStatus, BatchStatus, ExitStatus를 COMPLETED로 종료를 시킨다.
+
+- Step의 EXitStatus가 FAILED이더라도 JOB의 BATCHSTATUS가 COMPLETED로 종료
+- JOB의 재시작을 불가능하게 만든다.
+
+1. stopAndRestart
+
+stop과 비슷하지만 특정 step작업을 중단하고 이전 step은 completed로 저장을 하고 특정 step을 STOPPED 저장
+
+job이 다시 실행할 때 step을 restart인자로 넘기면 이전에 completed 스탭을 건너뛰고 STOPPED부터 시작한다.
+
+## 3. ExitStatus
+
+---
+
+- Job, Step이 어떤 상태로 종료가 되었는지 의미
+- StepExecutionListener의 afterStep 메서드의 Custom exitCode 생성 후 새로운 ExitStatus 반환
+
+```java
+
+@Bean
+public Job flowJob(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
+    return new JobBuilder("batchJob", jobRepository)
+            .incrementer(new RunIdIncrementer())
+            .start(step1(jobRepository, transactionManager))
+            .on(DEFAILT_ENUM.FAILED.getValue())
+            .to(step2(jobRepository, transactionManager))
+            .on("CUSTOM_EXIT_STATUS_CODE")
+            .stop()
+            .end()
+            .build();
+}
+
+@Bean
+public Step step1(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
+    return new StepBuilder("step1", jobRepository)
+            .tasklet(new Tasklet() {
+                @Override
+                public RepeatStatus execute(StepContribution contribution, ChunkContext chunkContext) throws Exception {
+                    contribution.setExitStatus(ExitStatus.FAILED);
+                    System.out.println("start step1 hello world");
+                    return RepeatStatus.FINISHED;
+                }
+            }, transactionManager)
+            .build();
+}
+
+@Bean
+public Step step2(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
+    return new StepBuilder("step2", jobRepository)
+            .tasklet(new Tasklet() {
+                @Override
+                public RepeatStatus execute(StepContribution contribution, ChunkContext chunkContext) throws Exception {
+                    System.out.println("start step2 hello world");
+                    return RepeatStatus.FINISHED;
+                }
+            }, transactionManager)
+            .build();
+}
+
+@Bean
+public Step step3(JobRepository jobRepository, PlatformTransactionManager transactionManager) {
+    return new StepBuilder("step3", jobRepository)
+            .tasklet(new Tasklet() {
+                @Override
+                public RepeatStatus execute(StepContribution contribution, ChunkContext chunkContext) throws Exception {
+                    System.out.println("start step3 hello world");
+                    return RepeatStatus.FINISHED;
+                }
+            }, transactionManager)
+            .build();
+}
+```
+
+**`BATCH_JOB_EXECUTION` 을 살펴보면 status가 모두 FAILED가 나온다.**
+
+- 이렇게 나온 이유는 step2가 `CUSTOM_EXIT_STATUS_CODE` 인데 success가 되기 때문에 stop을 실행하지 않는다.
+  - 이렇게 flow뒤에 실패가 되고 .end()를 하면 스프링 자체에서 FAILED를 JOB_Execution에 FAILED로 만듬
+
+<aside>
+💡 JOB_EXECUTION은 마지막 상태에 대해서 저장을 하는데 STEP2는 성공으로 나온다.
+
+</aside>
+
+```java
+[
+  {
+    "STATUS": "FAILED",
+    "EXIT_CODE": "FAILED"
+  }
+]
+```
+
+**`BATCH_STEP_EXECUTION`**
+
+```java
+[
+  {
+    "STATUS": "COMPLETED",
+    "EXIT_CODE": "FAILED"
+  },
+  {
+    "STATUS": "COMPLETED",
+    "EXIT_CODE": "COMPLETED"
+  }
+]
+```
+
+- 현재 step1은 FAIL이 나오고 STEP2는 COMPLETED가 나온다.
+- 기존에 생각은 step2가 custom이 아니니깐 fail이 나온다고 생각했지만 step2의 코드는 on을 실행하기 이전에 수행한다.
+
+## 4. JobExecutionDecider
+
+---
+
+- ExitStatus를 조작하거나 StepExecutionListener를 등록할 필요 없이 Transition 처리를 위한 전용 클래스
+- Step과 Transition 역활을 분리하기 위해 설정
+- ExitStatus가 아닌 JobExecutionDecider의 FlowExecutionStatus 상태값을 새롭게 설정해서 반환함
 
 
 ## FlowStep
