--- a/docs/3.Job,Step,Flow.md
+++ b/docs/3.Job,Step,Flow.md
@@ -537,14 +537,8 @@ public Step step3(JobRepository jobRepository, PlatformTransactionManager transa
 - 현재 step1은 FAIL이 나오고 STEP2는 COMPLETED가 나온다.
 - 기존에 생각은 step2가 custom이 아니니깐 fail이 나온다고 생각했지만 step2의 코드는 on을 실행하기 이전에 수행한다.
 
-## 4. JobExecutionDecider
-
----
-
-- ExitStatus를 조작하거나 StepExecutionListener를 등록할 필요 없이 Transition 처리를 위한 전용 클래스
-- Step과 Transition 역활을 분리하기 위해 설정
-- ExitStatus가 아닌 JobExecutionDecider의 FlowExecutionStatus 상태값을 새롭게 설정해서 반환함
-
+<Br/>
 
 ## FlowStep
 
+- Step 내에서 Flow를 할당하여 실행을 시키는 도메인 객체이다. 이때 flowStep에서는 BatchStatus와 ExitStatus은 Flow의 최종 상태값에 따라 결정이 된다.
